WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85659
V8RecursionScope not declared in V8Proxy::newInstance which causes ASSERT() failure from NPAPI
https://bugs.webkit.org/show_bug.cgi?id=85659
Summary
V8RecursionScope not declared in V8Proxy::newInstance which causes ASSERT() f...
Rafael Weinstein
Reported
2012-05-04 13:42:24 PDT
newInstance should be treated as calling into page script just like instrumentedCallFunction
Attachments
Patch
(1.43 KB, patch)
2012-05-04 13:44 PDT
,
Rafael Weinstein
no flags
Details
Formatted Diff
Diff
Patch
(29.07 KB, patch)
2012-05-07 11:14 PDT
,
Rafael Weinstein
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Rafael Weinstein
Comment 1
2012-05-04 13:44:52 PDT
Created
attachment 140313
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-04 14:21:08 PDT
Comment on
attachment 140313
[details]
Patch Clearing flags on attachment: 140313 Committed
r116171
: <
http://trac.webkit.org/changeset/116171
>
WebKit Review Bot
Comment 3
2012-05-04 14:21:13 PDT
All reviewed patches have been landed. Closing bug.
Rafael Weinstein
Comment 4
2012-05-07 11:14:10 PDT
Reopening to attach new patch.
Rafael Weinstein
Comment 5
2012-05-07 11:14:13 PDT
Created
attachment 140559
[details]
Patch
Ojan Vafai
Comment 6
2012-05-07 11:23:51 PDT
Pretty sure you meant this patch for a different bug. :)
Rafael Weinstein
Comment 7
2012-05-07 11:25:24 PDT
woops. yes
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug