V8RecursionScope not declared in V8Proxy::newInstance which causes ASSERT() failure from NPAPI https://bugs.webkit.org/show_bug.cgi?id=85659

Reviewed by Ojan Vafai.

Added a stack-allocted V8RecursionScope to the newInstance call.

No new tests. No change in observable behavior.

* bindings/v8/V8Proxy.cpp:
(WebCore::V8Proxy::newInstance):


Canonical link: https://commits.webkit.org/103239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116171 268f45cc-cd09-0410-ab3c-d52691b4dbfc